# Liq-Ranger

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  borrowers.gql  collaterals.gql  deploy.sh  docker-compose.override.yml  docker-compose.yml  docker.sh
.github/workflows/: prod.yml
abis/liquidator/: flash_liquidator.json
abis/morpho/: morpho_blue.json
data/sled_db/: db
db/: 20260424122753_create_initial_tables.up.sql
provisioning/datasource/: sqlite.yml
src/: abi_bindings.rs  block_watcher.rs  constants.rs  db.rs  lib.rs  liq_data_extractor.rs  liquidation_executor.rs  liquidation_worker.rs  main.rs  profit_distributor.rs  utils.rs  watchlist_pruner.rs
src/aave/: aave_config.rs  aave_liquidator.rs  aave_watchlist.rs  abi_bindings.rs  helpers.rs  mod.rs  types.rs  watchlist_updater.rs
src/abis/aave/: pool_data.json
src/abis/liquidator/: flash_liquidator.json
src/bootstrap_engine/: aave_bootstrap.rs  bootstrap_state.rs  compound_bootstrap.rs  mod.rs  morpho_bootstrap.rs
src/common/: abi_bindings.rs  liq_data.rs  mod.rs  paraswap.rs  simulation_sandbox.rs  task_manager.rs
src/compound/: abi_bindings.rs  compound_liquidator.rs  compound_watchlist.rs  compound_watchlist_updater.rs  helpers.rs  mod.rs  types.rs
src/config/: aave_config.rs  mod.rs  morpho_config.rs
src/helpers/: mod.rs  morpho_helpers.rs
src/liquidators/: aave_liquidator.rs  mod.rs  morpho_blue_liquidator.rs
src/models/: borrow.rs  liquidation.rs  mod.rs
src/morpho/: abi_bindings.rs  helpers.rs  mod.rs  morpho_config.rs  morpho_liquidator.rs  morpho_math.rs  morpho_watchlist.rs  types.rs  watchlist_updater.rs
src/watch_list/: aave_watch_list.rs  mod.rs  morpho_watch_list.rs
src/watch_list_updaters/: aave_watch_list_updater.rs  mod.rs
