[package]
name = "aave-reaper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
ethers = {version = "2.0.14", features = ["ws"]}
lazy_static = "1.5.0"
reqwest = {version = "0.12.20", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
log = "0.4"
env_logger = "0.11.8"
rayon = "1.10.0"
futures-util = "0.3.31"
async-trait = "0.1.89"
once_cell = "1.21.3"
