[package]
name = "liq-ranger"
version = "0.1.0"
edition = "2021"

[lib]
name = "liq_ranger"
path = "src/lib.rs"

[[bin]]
name = "liq-ranger"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
ethers = {version = "2.0.14", features = ["rustls","ws"]}
reqwest = {version = "0.12.20", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
async-trait = "0.1.89"
once_cell = "1.21.3"
tenderly-rs = "0.1.0"
dashmap = "6.1.0"
sled = "0.34.7"
bincode = "1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
secrecy = { version = "0.10.3", features = ["serde"] }
tokio-cron-scheduler = "0.15.1"


