[package]
name = "liq-ranger"
version = "0.1.0"
edition = "2021"

[lib]
name = "liq_ranger"
path = "src/lib.rs"

[[bin]]
name = "liq-ranger"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
ethers = {version = "2.0.14", features = ["rustls","ws"] }
reqwest = {version = "0.12.20", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
async-trait = "0.1.89"
once_cell = "1.21.3"
dashmap = "6.1.0"
sled = "0.34.7"
bincode = "1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
secrecy = { version = "0.10.3", features = ["serde"] }
tokio-cron-scheduler = "0.15.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
# 1. Level 'z' aggressively optimizes for binary size.
# Alternative: 's' for size-conscious but slightly faster execution.
opt-level = 3     

# 2. Enables "Link Time Optimization" to remove dead code across crates.
# Use "fat" for maximum cross-crate optimization.
lto = "thin"         

# 3. Reduces parallel processing to allow the compiler to see the whole program.
# Greatly improves code reduction, but makes compilation slower.
codegen-units = 1   

# 4. Removes debug symbols and symbol tables automatically.
# This is usually the single biggest size saver.
strip = true        

# 5. Removes "unwinding" logic (no stack traces on panic).
# Smaller binary, but the bot will immediately abort on error.
panic = "abort"